z-index fix

--- a/css/player_card.css
+++ b/css/player_card.css
@@ -123,7 +123,7 @@
   right: 0;
   width: 0;
   height: 0;
-  z-index: 9;
+  z-index: 8;
   border-style: solid;
   border-width: 0 4vh 4vh 0;
   border-top-color: transparent;
